[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socaity-face2face"
version = "1.1.1"
description="Swap faces from one image to another. Create face embeddings. Integrate into hosted environments."
requires-python = ">=3.8"
authors = [
    { name = "SocAIty" }
]
license = { text = "GPLv3" }
readme = "README.md"
dependencies = [
    'tqdm',
    'httpx',
    'onnx>=1.17.0',
    'onnxruntime-gpu>=1.20.1',
    "media-toolkit[VideoFile]>=00.02.06"
]

[project.urls]
Repository = "https://github.com/SocAIty/face2face"
Homepage = "https://www.socaity.ai"

[project.optional-dependencies]
full = [
    "fast-task-api[full]>=1.1.2",
]
