[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socaity-face2face"
version = "1.5.4"
description="Swap faces from one image to another. Create face embeddings. Integrate into hosted environments."
requires-python = ">=3.8"
authors = [
    { name = "SocAIty" }
]
license = { text = "GPLv3" }
readme = "README.md"
dependencies = [
    'tqdm',
    'httpx',
    'onnx>=1.19.0',
    'onnxruntime-gpu>=1.23.0',
    "media-toolkit>=00.02.18"
]

[project.urls]
Repository = "https://github.com/SocAIty/face2face"
Homepage = "https://www.socaity.ai"

[project.optional-dependencies]
full = [
	"apipod>=1.0.6",
]
dev = [
	"pytest>=7.0",
	"httpx>=0.24",
	"onnx>=1.19.0",
	"onnxruntime>=1.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
